fix: schema repository